Updated pf2e treasure generator script to successfully call api and display items to html.

--- a/generators/pf2e-treasure-generator.html
+++ b/generators/pf2e-treasure-generator.html
@@ -8,9 +8,13 @@ title: Pathfinder 2e Treasure Generator (Beta)
 <!-- Header -->
 <div>
     <p>
-        This tool generates treasure/loot for Pathfinder 2e by randomly selecting magic items from a database of all 
-        officially published Pathfinder 2e items. Narrow down the generated items by selecting/deselecting the desired 
+        This tool generates treasure/loot for Pathfinder 2e by randomly selecting magic items from a database of all
+        officially published Pathfinder 2e items. Narrow down the generated items by selecting/deselecting the desired
         item levels and/or categories in the menus below.
+    </p>
+    <p>
+        Clicking on a generated item will open that item's page on the <a href="https://2e.aonprd.com/" target="_blank" rel="noopener noreferrer">Archives of Nethys</a> 
+        where you can view more detailed information about the item.
     </p>
 </div>
 
@@ -23,73 +27,73 @@ title: Pathfinder 2e Treasure Generator (Beta)
             <!-- Levels 1-10 -->
             <div class="col no-left-pad">
                 <fieldset class="no-left-pad" id="item-level-fs">
-                    <input type="checkbox" id="lvl-1" name="level-checkbox" value="lvl-1" checked>
+                    <input type="checkbox" id="lvl-1" name="level-checkbox" value="1" checked>
                     <label for="lvl-1">1</label><br>
-                    <input type="checkbox" id="lvl-2" name="level-checkbox" value="lvl-2" checked>
+                    <input type="checkbox" id="lvl-2" name="level-checkbox" value="2" checked>
                     <label for="lvl-2">2</label><br>
-                    <input type="checkbox" id="lvl-3" name="level-checkbox" value="lvl-3" checked>
+                    <input type="checkbox" id="lvl-3" name="level-checkbox" value="3" checked>
                     <label for="lvl-3">3</label><br>
-                    <input type="checkbox" id="lvl-4" name="level-checkbox" value="lvl-4" checked>
+                    <input type="checkbox" id="lvl-4" name="level-checkbox" value="4" checked>
                     <label for="lvl-4">4</label><br>
-                    <input type="checkbox" id="lvl-5" name="level-checkbox" value="lvl-5" checked>
+                    <input type="checkbox" id="lvl-5" name="level-checkbox" value="5" checked>
                     <label for="lvl-5">5</label><br>
-                    <input type="checkbox" id="lvl-6" name="level-checkbox" value="lvl-6" checked>
+                    <input type="checkbox" id="lvl-6" name="level-checkbox" value="6" checked>
                     <label for="lvl-6">6</label><br>
-                    <input type="checkbox" id="lvl-7" name="level-checkbox" value="lvl-7" checked>
+                    <input type="checkbox" id="lvl-7" name="level-checkbox" value="7" checked>
                     <label for="lvl-7">7</label><br>
-                    <input type="checkbox" id="lvl-8" name="level-checkbox" value="lvl-8" checked>
+                    <input type="checkbox" id="lvl-8" name="level-checkbox" value="8" checked>
                     <label for="lvl-8">8</label><br>
-                    <input type="checkbox" id="lvl-9" name="level-checkbox" value="lvl-9" checked>
+                    <input type="checkbox" id="lvl-9" name="level-checkbox" value="9" checked>
                     <label for="lvl-9">9</label><br>
-                    <input type="checkbox" id="lvl-10" name="level-checkbox" value="lvl-10" checked>
+                    <input type="checkbox" id="lvl-10" name="level-checkbox" value="10" checked>
                     <label for="lvl-10">10</label><br>
                 </fieldset>
             </div>
             <!-- Levels 11-20 -->
             <div class="col no-left-pad">
                 <fieldset class="no-left-pad" id="item-level-fs">
-                    <input type="checkbox" id="lvl-11" name="level-checkbox" value="lvl-11" checked>
+                    <input type="checkbox" id="lvl-11" name="level-checkbox" value="11" checked>
                     <label for="lvl-11">11</label><br>
-                    <input type="checkbox" id="lvl-12" name="level-checkbox" value="lvl-12" checked>
+                    <input type="checkbox" id="lvl-12" name="level-checkbox" value="12" checked>
                     <label for="lvl-12">12</label><br>
-                    <input type="checkbox" id="lvl-13" name="level-checkbox" value="lvl-13" checked>
+                    <input type="checkbox" id="lvl-13" name="level-checkbox" value="13" checked>
                     <label for="lvl-13">13</label><br>
-                    <input type="checkbox" id="lvl-14" name="level-checkbox" value="lvl-14" checked>
+                    <input type="checkbox" id="lvl-14" name="level-checkbox" value="14" checked>
                     <label for="lvl-14">14</label><br>
-                    <input type="checkbox" id="lvl-15" name="level-checkbox" value="lvl-15" checked>
+                    <input type="checkbox" id="lvl-15" name="level-checkbox" value="15" checked>
                     <label for="lvl-15">15</label><br>
-                    <input type="checkbox" id="lvl-16" name="level-checkbox" value="lvl-16" checked>
+                    <input type="checkbox" id="lvl-16" name="level-checkbox" value="16" checked>
                     <label for="lvl-16">16</label><br>
-                    <input type="checkbox" id="lvl-17" name="level-checkbox" value="lvl-17" checked>
+                    <input type="checkbox" id="lvl-17" name="level-checkbox" value="17" checked>
                     <label for="lvl-17">17</label><br>
-                    <input type="checkbox" id="lvl-18" name="level-checkbox" value="lvl-18" checked>
+                    <input type="checkbox" id="lvl-18" name="level-checkbox" value="18" checked>
                     <label for="lvl-18">18</label><br>
-                    <input type="checkbox" id="lvl-19" name="level-checkbox" value="lvl-19" checked>
+                    <input type="checkbox" id="lvl-19" name="level-checkbox" value="19" checked>
                     <label for="lvl-19">19</label><br>
-                    <input type="checkbox" id="lvl-20" name="level-checkbox" value="lvl-20" checked>
+                    <input type="checkbox" id="lvl-20" name="level-checkbox" value="20" checked>
                     <label for="lvl-20">20</label><br>
                 </fieldset>
             </div>
             <!-- Levels 21-28 and 0 -->
             <div class="col no-left-pad">
                 <fieldset class="no-left-pad" id="item-level-fs">
-                    <input type="checkbox" id="lvl-21" name="level-checkbox" value="lvl-21">
+                    <input type="checkbox" id="lvl-21" name="level-checkbox" value="21">
                     <label for="lvl-21">21</label><br>
-                    <input type="checkbox" id="lvl-22" name="level-checkbox" value="lvl-22">
+                    <input type="checkbox" id="lvl-22" name="level-checkbox" value="22">
                     <label for="lvl-22">22</label><br>
-                    <input type="checkbox" id="lvl-23" name="level-checkbox" value="lvl-23">
+                    <input type="checkbox" id="lvl-23" name="level-checkbox" value="23">
                     <label for="lvl-23">23</label><br>
-                    <input type="checkbox" id="lvl-24" name="level-checkbox" value="lvl-24">
+                    <input type="checkbox" id="lvl-24" name="level-checkbox" value="24">
                     <label for="lvl-24">24</label><br>
-                    <input type="checkbox" id="lvl-25" name="level-checkbox" value="lvl-25">
+                    <input type="checkbox" id="lvl-25" name="level-checkbox" value="25">
                     <label for="lvl-25">25</label><br>
-                    <input type="checkbox" id="lvl-26" name="level-checkbox" value="lvl-26">
+                    <input type="checkbox" id="lvl-26" name="level-checkbox" value="26">
                     <label for="lvl-26">26</label><br>
-                    <input type="checkbox" id="lvl-27" name="level-checkbox" value="lvl-27">
+                    <input type="checkbox" id="lvl-27" name="level-checkbox" value="27">
                     <label for="lvl-27">27</label><br>
-                    <input type="checkbox" id="lvl-28" name="level-checkbox" value="lvl-28">
+                    <input type="checkbox" id="lvl-28" name="level-checkbox" value="28">
                     <label for="lvl-28">28</label><br>
-                    <input type="checkbox" id="lvl-0" name="level-checkbox" value="lvl-0" checked>
+                    <input type="checkbox" id="lvl-0" name="level-checkbox" value="0" checked>
                     <label for="lvl-0">0 (Mundane Items)</label><br>
                 </fieldset>
                 <input type="checkbox" id="levels-toggle" onchange="toggleAllLevels(this)" checked>
@@ -141,7 +145,8 @@ title: Pathfinder 2e Treasure Generator (Beta)
                     <label for="grimoires">Grimoires</label><br>
                     <input type="checkbox" id="held-items" name="category-checkbox" value="held items" checked>
                     <label for="held-items">Held Items</label><br>
-                    <input type="checkbox" id="intelligent-items" name="category-checkbox" value="intelligent items" checked>
+                    <input type="checkbox" id="intelligent-items" name="category-checkbox" value="intelligent items"
+                        checked>
                     <label for="intelligent-items">Intelligent Items</label><br>
                     <input type="checkbox" id="materials" name="category-checkbox" value="materials" checked>
                     <label for="materials">Materials</label><br>
@@ -212,20 +217,52 @@ title: Pathfinder 2e Treasure Generator (Beta)
 <div class="w3-row w3-padding-16 centered-text">
     <label>Number of items:</label>
     <select name="num_items" id="num_items">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
     </select>
-  </div>
+</div>
 
 <!-- Button -->
 <div>
     <div>
-        <button class="generator-button" type="button" onclick="generateNPC()">Generate Treasure</button>
+        <button class="generator-button" type="button" onclick="generatePf2eTreasure()">Generate Treasure</button>
     </div>
 </div>
 <br>
+
+<!-- Item Container -->
+<div>
+    <p id="error-p" style="display: none;">Error.</p>
+    <ol>
+        <li id="item-1" style="display: none;">
+            <a id="item-1-name" target="_blank" rel="noopener noreferrer">Item 1</a> - 
+            <span id="item-1-cat">Category</span> - 
+            Level <span id="item-1-lvl">1</span>
+        </li>
+        <li id="item-2" style="display: none;">
+            <a id="item-2-name" target="_blank" rel="noopener noreferrer">Item 2</a> - 
+            <span id="item-2-cat">Category</span> - 
+            Level <span id="item-2-lvl">2</span>
+        </li>
+        <li id="item-3" style="display: none;">
+            <a id="item-3-name" target="_blank" rel="noopener noreferrer">Item 3</a> - 
+            <span id="item-3-cat">Category</span> - 
+            Level <span id="item-3-lvl">3</span>
+        </li>
+        <li id="item-4" style="display: none;">
+            <a id="item-4-name" target="_blank" rel="noopener noreferrer">Item 4</a> - 
+            <span id="item-4-cat">Category</span> - 
+            Level <span id="item-4-lvl">4</span>
+        </li>
+        <li id="item-5" style="display: none;">
+            <a id="item-5-name" target="_blank" rel="noopener noreferrer">Item 5</a> - 
+            <span id="item-5-cat">Category</span> - 
+            Level <span id="item-5-lvl">5</span>
+        </li>
+    </ol>
+</div>
 
 {% include ads-horizontal-long.html %}
