Changed some names and added pf2e treasre generator to the generator page.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -7,14 +7,14 @@ order: 1
     <h2>Items & Loot</h2>
     <div class="card categories">
         <div class="card-header d-flex justify-content-between">
-            <a href="magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (D&D 5e)</a>
+            <a href="magic-item-generator.html" class="ml-1 mr-2">Homebrew Magic Item Generator (D&D 5e)</a>
         </div>
         <div class="card-header d-flex justify-content-between">
-            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Hoard Generator (D&D 5e)</a>
+            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Generator (D&D 5e)</a>
         </div>
-        <!-- <div class="card-header d-flex justify-content-between">
-            <a href="pf2e-magic-item-generator.html" class="ml-1 mr-2">Magic Item Generator (Pathfinder 2e)</a>
-        </div> -->
+        <div class="card-header d-flex justify-content-between">
+            <a href="pf2e-treasure-generator.html" class="ml-1 mr-2">Treasure Generator (Pathfinder 2e)</a>
+        </div>
     </div>
 </div>
 
