--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Magic Item Generator
+title: Homebrew Magic Item Generator
 ---
 
 <script src="../javascript/magicItemScripts.js"></script>
