Changed generator names on both generator page and page titles. Added breaks between pf2e generated items and ad.

--- a/generators/pf2e-loot-generator.html
+++ b/generators/pf2e-loot-generator.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Pathfinder 2e Treasure Generator (Beta)
+title: Pathfinder 2e Loot Generator (Beta)
 ---
 
 <script src="../javascript/pf2eTreasureScripts.js"></script>
@@ -264,5 +264,8 @@ title: Pathfinder 2e Treasure Generator (Beta)
         </li>
     </ol>
 </div>
+
+<br>
+<br>
 
 {% include ads-horizontal-long.html %}
