--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -10,10 +10,10 @@ order: 1
             <a href="magic-item-generator.html" class="ml-1 mr-2">Homebrew Magic Item Generator (D&D 5e)</a>
         </div>
         <div class="card-header d-flex justify-content-between">
-            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Generator (D&D 5e)</a>
+            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Hoard Generator (D&D 5e)</a>
         </div>
         <div class="card-header d-flex justify-content-between">
-            <a href="pf2e-treasure-generator.html" class="ml-1 mr-2">Treasure Generator (Pathfinder 2e)</a>
+            <a href="pf2e-loot-generator.html" class="ml-1 mr-2"> Loot Generator (Pathfinder 2e) (Beta)</a>
         </div>
     </div>
 </div>
