Added input validation to pf2e loot generator.

--- a/generators/pf2e-loot-generator.html
+++ b/generators/pf2e-loot-generator.html
@@ -224,7 +224,7 @@ title: Pathfinder 2e Loot Generator
 <!-- Button -->
 <div>
     <div>
-        <button class="generator-button" type="button" onclick="generatePf2eTreasure()">Generate Treasure</button>
+        <button class="generator-button" type="button" onclick="generatePf2eTreasure()">Generate Loot</button>
     </div>
 </div>
 <br>
