Removed old CSV link from 5e homebrew item generator.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -371,8 +371,7 @@ title: Homebrew Magic Item Generator
   </p>
   <p>
     The magical effects are divided into 5 power levels: mundane, low, medium, high, and curse. A more in-depth
-    description of these power levels can be found <a href="/posts/magic-item-generator-power-levels/">here</a> and a
-    CSV with all 353 effects can be downloaded <a href="/downloads/ILTB-Effects-20221227.csv" download>here</a>. After
+    description of these power levels can be found <a href="/posts/magic-item-generator-power-levels/">here</a>. After
     an item has been selected, a random power level is chosen from the list of power levels selected in the options
     above the generator. All power levels have an equal chance of being selected, regardless of the number of effects in
     the power level. Up to 4 effects can be applied to a single item. If the ‘Add Curse’ option is selected, the curse
