added generator list include snippet. Updated homepage and generators page to use generator list include. Updated survey link in AP ranking post.

--- a/_tabs/generators.html
+++ b/_tabs/generators.html
@@ -3,34 +3,7 @@
 icon: fas fa-info-circle
 order: 1
 ---
-<div>
-    <h2>Items & Loot</h2>
-    <div class="card categories">
-        <div class="card-header d-flex justify-content-between">
-            <a href="magic-item-generator.html" class="ml-1 mr-2">Homebrew Magic Item Generator (D&D 5e)</a>
-        </div>
-        <div class="card-header d-flex justify-content-between">
-            <a href="dnd-treasure-generator.html" class="ml-1 mr-2">Treasure Hoard Generator (D&D 5e)</a>
-        </div>
-        <div class="card-header d-flex justify-content-between">
-            <a href="pf2e-loot-generator.html" class="ml-1 mr-2"> Loot Generator (Pathfinder 2e)</a>
-        </div>
-    </div>
-</div>
 
-<div>
-    <h2>NPCs and Characters</h2>
-    <div class="card categories">
-        <div class="card-header d-flex justify-content-between">
-            <a href="npc-generator.html" class="ml-1 mr-2">NPC Generator (D&D 5e)</a>
-        </div>
-        <div class="card-header d-flex justify-content-between">
-            <a href="pf2e-npc-generator.html" class="ml-1 mr-2">NPC Generator (Pathfinder 2e)</a>
-        </div>
-        <div class="card-header d-flex justify-content-between">
-            <a href="fantasy-name-generator.html" class="ml-1 mr-2">Fantasy Name Generator</a>
-        </div>
-    </div>
-</div>
+{% include generator-list.html %}
 
 {% include ads-horizontal-long.html %}
