Added social media include with buttons. Added sm include to homepage and generator pages. Removed social media from sidebar.

--- a/generators/dnd-treasure-generator.html
+++ b/generators/dnd-treasure-generator.html
@@ -55,4 +55,8 @@ title: DnD 5e Treasure Hoard Generator
 
 <br>
 
+{% include social-media-links.html %}
+
+<br>
+
 {% include ads-horizontal-long.html %}
