--- a/generators/fantasy-name-generator.html
+++ b/generators/fantasy-name-generator.html
@@ -50,6 +50,11 @@ title: Fantasy Name Generator
 <div id="name-container">
 
 </div>
+
+<br>
+
+{% include social-media-links.html %}
+
 <br>
 
 {% include ads-horizontal-long.html %}
