--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -351,6 +351,10 @@ title: Homebrew Magic Item Generator
 
 <br>
 
+{% include social-media-links.html %}
+
+<br>
+
 {% include ads-horizontal-long.html %}
 
 <div>
