--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -366,6 +366,11 @@ title: D&D 5e NPC Generator
             onclick="regenField('npc-motivation-text')">
     </div>
 </div>
+
+<br>
+
+{% include social-media-links.html %}
+
 <br>
 
 {% include ads-horizontal-long.html %}
