--- a/generators/pf2e-loot-generator.html
+++ b/generators/pf2e-loot-generator.html
@@ -255,6 +255,9 @@ title: Pathfinder 2e Loot Generator
 </div>
 
 <br>
+
+{% include social-media-links.html %}
+
 <br>
 
 {% include ads-horizontal-long.html %}
