--- a/generators/pf2e-npc-generator.html
+++ b/generators/pf2e-npc-generator.html
@@ -376,6 +376,11 @@ title: Pathfinder 2e NPC Generator
             onclick="regenField('npc-motivation-text')">
     </div>
 </div>
+
+<br>
+
+{% include social-media-links.html %}
+
 <br>
 
 {% include ads-horizontal-long.html %}
